my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EBADFAIL/EBADFAIL.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBADFAIL.dml:33:5: In bad
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBADFAIL.dml:29:5: error EBADFAIL: uncaught exception
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBADFAIL.dml:22:1: In m2
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBADFAIL.dml:24:5: error EBADFAIL: uncaught exception
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBADFAIL.dml:17:1: In m1
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBADFAIL.dml:19:5: error EBADFAIL: uncaught exception
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBADFAIL.dml:9:1: In m0
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBADFAIL.dml:11:5: error EBADFAIL: uncaught exception
